# motor_driver

backend/: .cproject  motor_driver.ioc
backend/Core/Inc/: main.h
backend/Core/Src/: main.c  stm32f1xx_hal_msp.c
backend/Debug/: makefile  motor_driver.elf  motor_driver.list  motor_driver.map
backend/Debug/Core/Src/: main.cyclo  main.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su
backend/USB_DEVICE/App/: usbd_cdc_if.c
gui/: .gitignore  connection.py  main.py  motor_control_panel.py  motor_driver_gui.py  pyproject.toml
